{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 136,
  "lineage": "14d02829-edc2-95c1-7dff-d34874e444e2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "main_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:249471344514:route-table/rtb-02bd4fe212be0245b",
            "default_route_table_id": "rtb-02bd4fe212be0245b",
            "id": "rtb-02bd4fe212be0245b",
            "owner_id": "249471344514",
            "propagating_vgws": [],
            "region": "me-central-1",
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b47a6259398f2a58",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-rt"
            },
            "tags_all": {
              "Name": "dev-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8820211b0a292d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.myapp_igw",
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myapp_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:249471344514:internet-gateway/igw-0b47a6259398f2a58",
            "id": "igw-0b47a6259398f2a58",
            "owner_id": "249471344514",
            "region": "me-central-1",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0b8820211b0a292d3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myapp_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:249471344514:subnet/subnet-0cee13893c010dee1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-central-1a",
            "availability_zone_id": "mec1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cee13893c010dee1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "249471344514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "me-central-1",
            "tags": {
              "Name": "dev-subnet-1"
            },
            "tags_all": {
              "Name": "dev-subnet-1"
            },
            "vpc_id": "vpc-0b8820211b0a292d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "249471344514",
            "id": "subnet-0cee13893c010dee1",
            "region": "me-central-1"
          },
          "dependencies": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myapp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:249471344514:vpc/vpc-0b8820211b0a292d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0060513ef6efabc4a",
            "default_route_table_id": "rtb-02bd4fe212be0245b",
            "default_security_group_id": "sg-00aa516e47dad1105",
            "dhcp_options_id": "dopt-0df9d1f801b853f87",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b8820211b0a292d3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02bd4fe212be0245b",
            "owner_id": "249471344514",
            "region": "me-central-1",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "249471344514",
            "id": "vpc-0b8820211b0a292d3",
            "region": "me-central-1"
          }
        }
      ]
    },
    {
      "module": "module.myapp_web_1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "myapp-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05524d6658fcf35b6",
            "arn": "arn:aws:ec2:me-central-1:249471344514:instance/i-03d3d695465252026",
            "associate_public_ip_address": true,
            "availability_zone": "me-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03d3d695465252026",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-serverkey-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b17f920a73cbe125"
              }
            ],
            "primary_network_interface_id": "eni-0b17f920a73cbe125",
            "private_dns": "ip-10-0-10-101.me-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.101",
            "public_ip": "158.252.78.204",
            "region": "me-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fce04801913ba941",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b210049d0b421b99"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cee13893c010dee1",
            "tags": {
              "Name": "dev-ec2-instance-1"
            },
            "tags_all": {
              "Name": "dev-ec2-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b210049d0b421b99"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "249471344514",
            "id": "i-03d3d695465252026",
            "region": "me-central-1"
          },
          "dependencies": [
            "aws_subnet.myapp_subnet_1",
            "aws_vpc.myapp_vpc",
            "data.http.my_ip",
            "module.myapp_web_1.aws_key_pair.ssh-key",
            "module.myapp_web_1.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.myapp_web_1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:249471344514:security-group/sg-0b210049d0b421b99",
            "description": "Security group for web server allowing HTTP, HTTPS and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b210049d0b421b99",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "20.192.21.53/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-web-sg-1",
            "name_prefix": "",
            "owner_id": "249471344514",
            "region": "me-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-default-sg"
            },
            "tags_all": {
              "Name": "dev-default-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8820211b0a292d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "249471344514",
            "id": "sg-0b210049d0b421b99",
            "region": "me-central-1"
          },
          "dependencies": [
            "aws_vpc.myapp_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "module": "module.myapp_web_2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "myapp-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05524d6658fcf35b6",
            "arn": "arn:aws:ec2:me-central-1:249471344514:instance/i-08ccf5ff446d588b3",
            "associate_public_ip_address": true,
            "availability_zone": "me-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ccf5ff446d588b3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-serverkey-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-034c8bdb0fd2549f0"
              }
            ],
            "primary_network_interface_id": "eni-034c8bdb0fd2549f0",
            "private_dns": "ip-10-0-10-123.me-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.123",
            "public_ip": "3.29.231.98",
            "region": "me-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d9ca13d5f09a3795",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-09a0426ee7e5c6444"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cee13893c010dee1",
            "tags": {
              "Name": "dev-ec2-instance-2"
            },
            "tags_all": {
              "Name": "dev-ec2-instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09a0426ee7e5c6444"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "249471344514",
            "id": "i-08ccf5ff446d588b3",
            "region": "me-central-1"
          },
          "dependencies": [
            "aws_subnet.myapp_subnet_1",
            "aws_vpc.myapp_vpc",
            "data.http.my_ip",
            "module.myapp_web_2.aws_key_pair.ssh-key",
            "module.myapp_web_2.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.myapp_web_2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:249471344514:security-group/sg-09a0426ee7e5c6444",
            "description": "Security group for web server allowing HTTP, HTTPS and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a0426ee7e5c6444",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "20.192.21.53/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-web-sg-2",
            "name_prefix": "",
            "owner_id": "249471344514",
            "region": "me-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-default-sg"
            },
            "tags_all": {
              "Name": "dev-default-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8820211b0a292d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "249471344514",
            "id": "sg-09a0426ee7e5c6444",
            "region": "me-central-1"
          },
          "dependencies": [
            "aws_vpc.myapp_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "module": "module.myapp_webserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "myapp-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05524d6658fcf35b6",
            "arn": "arn:aws:ec2:me-central-1:249471344514:instance/i-0be3eeab3895a6e0c",
            "associate_public_ip_address": true,
            "availability_zone": "me-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0be3eeab3895a6e0c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-serverkey-0",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0002391cf5d8481e9"
              }
            ],
            "primary_network_interface_id": "eni-0002391cf5d8481e9",
            "private_dns": "ip-10-0-10-56.me-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.56",
            "public_ip": "51.112.51.163",
            "region": "me-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ff2fd4f6c29c855d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0f16f39c9cbce36db"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cee13893c010dee1",
            "tags": {
              "Name": "dev-ec2-instance-0"
            },
            "tags_all": {
              "Name": "dev-ec2-instance-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f16f39c9cbce36db"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "249471344514",
            "id": "i-0be3eeab3895a6e0c",
            "region": "me-central-1"
          },
          "dependencies": [
            "aws_subnet.myapp_subnet_1",
            "aws_vpc.myapp_vpc",
            "data.http.my_ip",
            "module.myapp_webserver.aws_key_pair.ssh-key",
            "module.myapp_webserver.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.myapp_webserver",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:249471344514:security-group/sg-0f16f39c9cbce36db",
            "description": "Security group for web server allowing HTTP, HTTPS and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f16f39c9cbce36db",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "20.192.21.53/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-web-sg-0",
            "name_prefix": "",
            "owner_id": "249471344514",
            "region": "me-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-default-sg"
            },
            "tags_all": {
              "Name": "dev-default-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8820211b0a292d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "249471344514",
            "id": "sg-0f16f39c9cbce36db",
            "region": "me-central-1"
          },
          "dependencies": [
            "aws_vpc.myapp_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    }
  ]
}